# note_app

./: .gitignore  AGENTS.md  PROJECT_HANDOFF.md
app/notebase/: index.html  package-lock.json  package.json  vite.config.ts
app/notebase/src/: App.css  App.tsx  index.css
app/notebase/src-tauri/: Cargo.toml  tauri.conf.json
app/notebase/src-tauri/src/: lib.rs  main.rs
docs/: PRD.md  TECH_STACK_DECISION.md  UCD.md  VIBE_CODING_PLAN.md
