[package]
name = "notebase"
version = "0.1.0"
description = "Local-first notes and knowledge base app"
authors = ["xd"]
edition = "2021"

[lib]
name = "notebase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
